--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-title = "My cool new Blog"
+title = "TESTING"
 baseURL = "https://example.com/"
 
 # Option 1 (recommended): adding the theme as a Hugo module
